setup basic authentication and user module

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <div class="container-fluid">
-
+  <div class="mt-2">
+    <%- include('./shared/flash-message', { messages: messages}) %>
+  </div>
   <!-- start page title -->
   <div class="row">
     <div class="col-12">
