--- a/views/layouts/dashboard.ejs
+++ b/views/layouts/dashboard.ejs
@@ -8,15 +8,15 @@
   <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
   <meta content="Coderthemes" name="author" />
   <!-- App favicon -->
-  <link rel="shortcut icon" href="assets/images/favicon.ico">
+  <link rel="shortcut icon" href="/assets/images/favicon.ico">
 
   <!-- third party css -->
-  <link href="assets/css/vendor/jquery-jvectormap-1.2.2.css" rel="stylesheet" type="text/css" />
+  <link href="/assets/css/vendor/jquery-jvectormap-1.2.2.css" rel="stylesheet" type="text/css" />
   <!-- third party css end -->
 
   <!-- App css -->
-  <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" />
-  <link href="assets/css/app.min.css" rel="stylesheet" type="text/css" />
+  <link href="/assets/css/icons.min.css" rel="stylesheet" type="text/css" />
+  <link href="/assets/css/app.min.css" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -33,10 +33,10 @@
         <!-- LOGO -->
         <a href="index.html" class="logo text-center">
           <span class="logo-lg">
-            <img src="assets/images/logo.png" alt="" height="16">
+            <img src="/assets/images/logo.png" alt="" height="16">
           </span>
           <span class="logo-sm">
-            <img src="assets/images/logo_sm.png" alt="" height="16">
+            <img src="/assets/images/logo_sm.png" alt="" height="16">
           </span>
         </a>
 
@@ -404,7 +404,7 @@
           <a href="javascript: void(0);" class="float-right close-btn text-white">
             <i class="mdi mdi-close"></i>
           </a>
-          <img src="assets/images/help-icon.svg" height="90" alt="Helper Icon Image" />
+          <img src="/assets/images/help-icon.svg" height="90" alt="Helper Icon Image" />
           <h5 class="mt-3">Unlimited Access</h5>
           <p class="mb-3">Upgrade to plan to get access to unlimited reports</p>
           <a href="javascript: void(0);" class="btn btn-outline-light btn-sm">Upgrade</a>
@@ -474,7 +474,7 @@
                   <!-- item-->
                   <a href="javascript:void(0);" class="dropdown-item notify-item">
                     <div class="notify-icon">
-                      <img src="assets/images/users/avatar-2.jpg" class="img-fluid rounded-circle" alt="" /> </div>
+                      <img src="/assets/images/users/avatar-2.jpg" class="img-fluid rounded-circle" alt="" /> </div>
                     <p class="notify-details">Cristina Pride</p>
                     <p class="text-muted mb-0 user-msg">
                       <small>Hi, How are you? What about our next meeting</small>
@@ -494,7 +494,7 @@
                   <!-- item-->
                   <a href="javascript:void(0);" class="dropdown-item notify-item">
                     <div class="notify-icon">
-                      <img src="assets/images/users/avatar-4.jpg" class="img-fluid rounded-circle" alt="" /> </div>
+                      <img src="/assets/images/users/avatar-4.jpg" class="img-fluid rounded-circle" alt="" /> </div>
                     <p class="notify-details">Karen Robinson</p>
                     <p class="text-muted mb-0 user-msg">
                       <small>Wow ! this admin looks good and awesome design</small>
@@ -525,7 +525,7 @@
               <a class="nav-link dropdown-toggle nav-user arrow-none mr-0" data-toggle="dropdown" href="#" role="button"
                 aria-haspopup="false" aria-expanded="false">
                 <span class="account-user-avatar">
-                  <img src="assets/images/users/avatar-1.jpg" alt="user-image" class="rounded-circle">
+                  <img src="/assets/images/users/avatar-1.jpg" alt="user-image" class="rounded-circle">
                 </span>
                 <span>
                   <span class="account-user-name">Dominic Keller</span>
@@ -746,17 +746,18 @@
   <!-- /Right-bar -->
 
   <!-- bundle -->
-  <script src="assets/js/app.min.js"></script>
+  <script src="/assets/js/app.min.js"></script>
 
   <!-- third party js -->
-  <script src="assets/js/vendor/Chart.bundle.min.js"></script>
-  <script src="assets/js/vendor/jquery-jvectormap-1.2.2.min.js"></script>
-  <script src="assets/js/vendor/jquery-jvectormap-world-mill-en.js"></script>
+  <script src="/assets/js/vendor/Chart.bundle.min.js"></script>
+  <script src="/assets/js/vendor/jquery-jvectormap-1.2.2.min.js"></script>
+  <script src="/assets/js/vendor/jquery-jvectormap-world-mill-en.js"></script>
   <!-- third party js ends -->
 
   <!-- demo app -->
-  <script src="assets/js/pages/demo.dashboard.js"></script>
+  <script src="/assets/js/pages/demo.dashboard.js"></script>
   <!-- end demo js-->
+  <script src="/assets/js/custom/index.js"></script>
 </body>
 
 </html>
