implement user book trainer basic flow

--- a/views/layouts/dashboard.ejs
+++ b/views/layouts/dashboard.ejs
@@ -12,11 +12,13 @@
 
   <!-- third party css -->
   <link href="/assets/css/vendor/jquery-jvectormap-1.2.2.css" rel="stylesheet" type="text/css" />
+  <link href="/assets/css/vendor/fullcalendar.min.css" rel="stylesheet" type="text/css" />
   <!-- third party css end -->
 
   <!-- App css -->
   <link href="/assets/css/icons.min.css" rel="stylesheet" type="text/css" />
   <link href="/assets/css/app.min.css" rel="stylesheet" type="text/css" />
+  <link href="/assets/css/custom.css" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -752,12 +754,9 @@
   <script src="/assets/js/vendor/Chart.bundle.min.js"></script>
   <script src="/assets/js/vendor/jquery-jvectormap-1.2.2.min.js"></script>
   <script src="/assets/js/vendor/jquery-jvectormap-world-mill-en.js"></script>
-  <!-- third party js ends -->
-
-  <!-- demo app -->
-  <script src="/assets/js/pages/demo.dashboard.js"></script>
-  <!-- end demo js-->
+  <script src="/assets/js/vendor/fullcalendar.min.js"></script>
   <script src="/assets/js/custom/index.js"></script>
+  <script src="/assets/js/custom/calendar.js"></script>
 </body>
 
 </html>
