--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -19,23 +19,43 @@
             </thead>
             <tbody>
               <% users.forEach(function(user){ %>
-                <tr>
-                  <td><%= user.username %></td>
-                  <td><%= user.email %></td>
-                  <td><%= user.first_name %></td>
-                  <td><%= user.last_name %></td>
-                  <td><%= user.role %></td>
-                  <td>
-                    <a href="users/<%= user.id %>/edit" class="btn btn-info">Edit</a>
-                    <a href="users/<%= user.id %>/delete" class="confirm-dialog btn btn-danger">Delete</a>
-                  </td>
-                </tr>
+              <tr>
+                <td><%= user.username %></td>
+                <td><%= user.email %></td>
+                <td><%= user.first_name %></td>
+                <td><%= user.last_name %></td>
+                <td><%= user.role %></td>
+                <td>
+                  <a href="users/<%= user.id %>/edit" class="btn btn-info">Edit</a>
+                  <a href="users/<%= user.id %>/delete" class="confirm-dialog btn btn-danger">Delete</a>
+                </td>
+              </tr>
               <% }) %>
             </tbody>
           </table>
+          <ul class="pagination pagination-rounded float-right mt-3 mr-3">    
+            <li class="paginate_button page-item previous <%= userPagy.firstPage ? 'disabled' : '' %>" id="basic-datatable_previous">
+              <a href="/users?page=<%= userPagy.prevPage %>" aria-controls="basic-datatable" data-dt-idx="0" tabindex="0" class="page-link">
+                <i class="mdi mdi-chevron-left"></i>
+              </a>
+            </li>
+            <% for(let idx = 1; idx <= userPagy.totalPage; idx++) { %>
+              <li class="paginate_button page-item <%= userPagy.currentPage === idx ? 'active' : '' %>">
+                <a href="/users?page=<%= idx %>" aria-controls="basic-datatable" data-dt-idx="1" tabindex="0"
+                class="page-link"><%= idx %></a>
+              </li>
+            <% } %>      
+            <li class="paginate_button page-item next <%= userPagy.lastPage ? 'disabled' : '' %>" id="basic-datatable_next">
+              <a href="/users?page=<%= userPagy.nextPage %>" aria-controls="basic-datatable" data-dt-idx="7" tabindex="0" class="page-link">
+                <i class="mdi mdi-chevron-right"></i>
+              </a>
+            </li>
+          </ul> 
+  
         </div> <!-- end table-responsive-->
-
+        
       </div> <!-- end card body-->
     </div> <!-- end card -->
   </div><!-- end col-->
 </div>
+
