--- a/views/members/index.ejs
+++ b/views/members/index.ejs
@@ -3,8 +3,8 @@
     <div class="card">
       <div class="card-body">
         <%- include('./../shared/flash-message', { messages: messages }) %>
-        <h4 class="header-title">User management</h4>
-        <a href="/users/new" class="btn btn-primary mb-2">Add an user</a>
+        <h4 class="header-title">Member management</h4>
+        <a href="/members/new" class="btn btn-primary mb-2">Create member account</a>
         <div class="table-responsive-sm">
           <table class="table table-centered mb-0">
             <thead>
@@ -14,7 +14,8 @@
                 <th>First name</th>
                 <th>Last name</th>
                 <th>Gender</th>
-                <th>Role</th>
+                <th>Phoner</th>
+                <th>Address</th>
                 <th>Actions</th>
               </tr>
             </thead>
@@ -26,10 +27,10 @@
                 <td><%= user.first_name %></td>
                 <td><%= user.last_name %></td>
                 <td><%= user.gender %></td>
-                <td><%= user.role %></td>
+                <td><%= user.phone %></td>
+                <td><%= user.address %></td>
                 <td>
-                  <a href="users/<%= user.id %>/edit" class="btn btn-info">Edit</a>
-                  <a href="users/<%= user.id %>/delete" class="confirm-dialog btn btn-danger">Delete</a>
+                  <a href="members/<%= user.id %>/packages" class="btn btn-info">See packages</a>
                 </td>
               </tr>
               <% }) %>
@@ -37,7 +38,6 @@
           </table>
           <%- include('./../shared/pagination', { resource, resourcePagy }) %>
         </div> <!-- end table-responsive-->
-
       </div> <!-- end card body-->
     </div> <!-- end card -->
   </div><!-- end col-->
