--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -33,10 +33,6 @@
   cursor: pointer;
 }
 
-.card-checkbox-thumb:hover .card-checkbox-thumb-icon {
-  visibility: visible;
-}
-
 .card-checkbox-thumb.dp::before {
   content:'\A';
   position:absolute;
@@ -56,4 +52,10 @@
   transform: translate(-50%,-50%);
   font-size: 100;
   visibility: visible;
+}
+
+.card-checkbox-thumb-img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
 }
