--- a/views/members/index.ejs
+++ b/views/members/index.ejs
@@ -30,7 +30,7 @@
                 <td><%= user.phone %></td>
                 <td><%= user.address %></td>
                 <td>
-                  <a href="members/<%= user.id %>/packages" class="btn btn-info">Gói tập</a>
+                  <a href="members/<%= user.id %>/packages" class="btn btn-info">Packages</a>
                 </td>
               </tr>
               <% }) %>
