add workshift, retrieve workshifts, delete workshift

--- a/views/layouts/dashboard.ejs
+++ b/views/layouts/dashboard.ejs
@@ -43,7 +43,7 @@
       ];
     } else if(user.role === 'manager') {
       menuList = [
-        { label: 'Work-shift Management', link: '/members' }
+        { label: 'Work-shift Management', link: '/workshifts' }
       ];
     } else if(user.role === 'trainer') {
       menuList = [
