CRUD for equipment resources

--- a/views/layouts/dashboard.ejs
+++ b/views/layouts/dashboard.ejs
@@ -57,7 +57,18 @@
     } else if(user.role === 'admin') {
       menuList = [
         { label: 'User', link: '/users' },
-        { label: 'Courses', link: '/courses' }
+        { label: 'Member Management', link: '/members' },
+        { label: 'Packages', link: '/dashboard/packages' },
+        { label: 'Book A Trainer', link: '/trainers' },
+        { label: 'Booking History', link: '/users/booking-histories' },
+        { label: 'Salary Management', link: '/salaries' },
+        { label: 'Payment Management', link: '/payments' },
+        { label: 'Income And Expenses', link: '/income-and-expenses' },
+        { label: 'Work-shift Management', link: '/workshifts' },
+        { label: 'Training Requests', link: '/trainers/booking-requests' },
+        { label: 'Booking History', link: '/trainers/booking-histories' },
+        { label: 'Equipment Management', link: '/equipments' }
+
       ];
     }
   %>
